<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Status Bar</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="status_bar_latestnews_events_title">You have Notifications</string>
    <string name="battery_low_title">Please connect charger</string>
    <string name="battery_low_subtitle">The battery is getting low:</string>
    <string name="battery_low_percent_format"><xliff:g id="number">%d%%</xliff:g>
    or less remaining.</string>
    <string name="battery_full_title">Please unplug charger</string>
    <string name="battery_full_subtitle">The battery is full:</string>
    <string name="battery_full_percent_format">Battery Full <xliff:g id="number">%d%%</xliff:g>
    .</string>
    <string name="battery_low_why">Battery use</string>
    <string name="usb_accessory_permission_prompt">Allow the application %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed applications work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="status_bar_date_formatter">%1$s\n%2$s</string>
    <string name="powerwidget_screen_timeout_toast">Screen timeout set to: %1$d %2$s</string>
    <string name="powerwidget_screen_timeout_tile">STout: %1$d %2$s</string>
    <string name="status_bar_date_formats">%1$s</string>
    <string name="abbrev_wday_month_day_no_year">E MMM d</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="status_bar_notifications">Notification</string>
    <string name="status_bar_powerwidget">Power widget</string>
    <string name="kosong">  </string>
    <string name="charter">Chart</string>
    <string name="switch_wifi_text">Wi-Fi</string>
    <string name="switch_bluetooth_text">Bluetooth</string>
    <string name="switch_gps_text">GPS</string>
    <string name="switch_sync_text">Sync</string>
    <string name="switch_airpl_text">AirPlane</string>
    <string name="switch_mbldata_text">MobileData</string>
    <string name="switch_autorot_text">AutoRotate</string>
    <string name="smscall_popup">Message Info</string>
    <string name="weather_fetch_failure">Fetch failed</string>
    <string name="callings">Make a Call</string>
    <string name="ethernet_label">Ethernet</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_network_name_separator" translatable="false">|</string>
    <string name="status_bar_settings_signal_meter_disconnected">
        No Internet connection
    </string>
    <string name="status_bar_settings_signal_meter_wifi_nossid">Wi-Fi connected</string>
    <string name="quick_settings_airplane_on_label">Airplane On</string>
    <string name="quick_settings_airplane_off_label">Airplane Off</string>
    <string name="quick_settings_battery_charging_label">Charging, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="quick_settings_battery_charged_label">Charged</string>
    <string name="quick_settings_bluetooth_label">Bluetooth On</string>
    <string name="quick_settings_bluetooth_label_connected">Connected</string>
    <string name="quick_settings_bluetooth_label_turnon">Turning On</string>
    <string name="quick_settings_bluetooth_label_turnoff">Turning Off</string>
    <string name="quick_settings_bluetooth_label_error">Error</string>
    <string name="quick_settings_bluetooth_multiple_devices_label">Bluetooth (<xliff:g id="number">%d</xliff:g> Devices)</string>
    <string name="quick_settings_bluetooth_off_label">Bluetooth Off</string>
    <string name="quick_settings_brightness_labellow">Brightness Low</string>
    <string name="quick_settings_brightness_labelmid">Brightness Med</string>
    <string name="quick_settings_brightness_label">Brightness</string>
    <string name="quick_settings_rotation_unlocked_label">Auto Rotate</string>
    <string name="quick_settings_rotation_locked_label">Rotation Locked</string>
    <string name="quick_settings_ime_label">Input Method</string>
    <string name="quick_settings_location_label">Location in use</string>
    <string name="quick_settings_media_device_label">Media device</string>
    <string name="quick_settings_rssi_label">RSSI</string>
    <string name="quick_settings_rssi_emergency_only">Emergency Calls Only</string>
    <string name="quick_settings_settings_label">Settings</string>
    <string name="quick_settings_time_label">Time</string>
    <string name="quick_settings_user_label">ME</string>
    <string name="quick_settings_wifiap_label">Wi-Fi Hotspot On</string>
    <string name="quick_settings_wifiap_off_label">Wi-Fi Hotspot Off</string>
    <string name="quick_settings_wifi_label">Wi-Fi On</string>
    <string name="quick_settings_wifi_label_connected">Connected</string>
    <string name="quick_settings_wifi_label_turnon">Turning On</string>
    <string name="quick_settings_wifi_label_turnoff">Turning Off</string>
    <string name="quick_settings_wifi_label_error">Error</string>
    <string name="quick_settings_wifi_not_connected">Not Connected</string>
    <string name="quick_settings_wifi_no_network">No Network</string>
    <string name="quick_settings_wifi_off_label">Wi-Fi Off</string>
    <string name="quick_settings_wifi_display_label">Wi-Fi Display</string>
    <string name="quick_settings_wifi_display_no_connection_label">Wireless Display</string>
    <string name="quick_settings_profile_label">Profile</string>
    <string name="quick_settings_brightness_dialog_title">Brightness</string>
    <string name="quick_settings_brightness_dialog_auto_brightness_label">AUTO</string>
    <string name="quick_settings_sleep">Sleep</string>
    <string name="quick_settings_lockon">Lock Enable</string>
    <string name="quick_settings_lockoff">Lock Disable</string>
    <string name="quick_settings_screenshot">CMXhots</string>
    <string name="quick_settings_gps">GPS</string>
    <string name="quick_settings_gps_search">Searching</string>
    <string name="quick_settings_screen_sleep">Go to sleep</string>
    <string name="quick_settings_ringer_on">Sound on</string>
    <string name="quick_settings_ringer_off">Sound off</string>
    <string name="quick_settings_vibration_on">Vibration on</string>
    <string name="quick_settings_vibration_off">Vibration off</string>
    <string name="quick_settings_label_enabled">On</string>
    <string name="quick_settings_label_disabled">Off</string>
    <string name="quick_settings_label_locked">Locked</string>
    <string name="quick_settings_ringer_onn">Ring On</string>
    <string name="quick_settings_vibrate">Vibrate</string>
    <string name="quick_settings_ringer_offf">Ring Off</string>
    <string name="quick_settings_ringer_silent">Silent</string>
    <string name="quick_settings_ringer_vibrate">Ring and Vibrate</string>
    <string name="quick_settings_lockscreen">Lock screen</string>
    <string name="quick_settings_network_type">Network mode</string>
    <string name="quick_settings_report_bug">Report bug</string>
    <string name="quick_settings_sync">Sync</string>
    <string name="quick_settings_torch">Torch</string>
    <string name="quick_settings_nfc">NFC</string>
    <string name="quick_settings_screen_timeout">Timeout</string>
    <string name="quick_settings_screen_timeout_summary">%1$d %2$s</string>
    <string name="quick_settings_notif_enable_label">Notif On</string>
    <string name="quick_settings_notif_disable_label">Notif Off</string>
    <string name="quick_settings_powermenu_label">Power menu</string>
    <string name="quick_settings_volume">Volume</string>
    <string name="status_bar_settings_battery_meter_format" translatable="false">
        <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g>
    </string>
    <string name="status_bar_settings_battery_meter_min_format" translatable="false">
        <xliff:g id="number">%d</xliff:g>
    </string>
    <string name="widget_wifi_title">Wi-Fi</string>
    <string name="widget_wifiap_title">Hot Spot</string>
    <string name="widget_gps_title">Gps</string>
    <string name="widget_sync_title">Sync</string>
    <string name="widget_bt_title">Bluetooth</string>
    <string name="widget_mobile_data_title">Mobile Data</string>
    <string name="widget_auto_rotate_title">Auto Rotate</string>
    <string name="widget_airplane_title">Airplane Mode</string>
    <string name="default_qwik_widgets">toggleMobileData|toggleAirplaneMode|toggleWifi|toggleBluetooth|toggleAutoRotate|toggleSync|toggleWifiAp|toggleGps</string>
    <string name="pie_date_format">ccc, dd MMM yyyy</string>
    <string name="pie_hour_format_12">hh:mm</string>
    <string name="pie_hour_format_24">HH:mm</string>
    <string name="pie_am_pm">a</string>
    <string name="battery_fulls_percent_format"><xliff:g id="number">%d%%</xliff:g> fully charged.</string>
    <string name="battery_charging_format">Charging, <xliff:g id="number">%d%%</xliff:g></string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>