<?xml version="1.0" encoding="utf-8"?>
<!--
/* apps/common/assets/default/default/skins/StatusBar.xml
**
** Copyright 2006, The Android Open Source Project
** Patched by Sven Dawitz; Copyright (C) 2011 CyanogenMod Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<com.android.systemui.statusbar.ExpandedView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    >

<!-- START STACK 1 -->
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/notifications_layout" >

    <FrameLayout android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:overScrollMode="ifContentScrolls"
            >
            <com.android.systemui.statusbar.NotificationLinearLayout
                android:id="@+id/notificationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView android:id="@+id/noNotificationsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shade_header_background"
                    android:paddingLeft="5dp"
                    android:textAppearance="@style/TextAppearance.StatusBar.Title"
                    android:text="@string/status_bar_no_notifications_title"
                    />

                <TextView android:id="@+id/ongoingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shade_header_background"
                    android:paddingLeft="5dp"
                    android:textAppearance="@style/TextAppearance.StatusBar.Title"
                    android:text="@string/status_bar_ongoing_events_title"
                    />
                <LinearLayout android:id="@+id/ongoingItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    />

                <TextView android:id="@+id/latestTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shade_header_background"
                    android:paddingLeft="5dp"
                    android:textAppearance="@style/TextAppearance.StatusBar.Title"
                    android:text="@string/status_bar_latest_events_title"
                    />
                <LinearLayout android:id="@+id/latestItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    />
                <TextView android:id="@+id/compact_clear_all_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/status_bar_clear_all_button"
                    style="@style/StatusBar.ClearButton"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                />
            </com.android.systemui.statusbar.NotificationLinearLayout>
        </ScrollView>
        <ScrollView
            android:id="@+id/bottomScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:overScrollMode="ifContentScrolls"
            >
            <com.android.systemui.statusbar.NotificationLinearLayout
                android:id="@+id/bottomNotificationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                />
        </ScrollView>

        <LinearLayout android:id="@+id/compact_carrier_layout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <com.android.systemui.statusbar.CarrierLabel
                 android:gravity="bottom|right|center"
                 android:textAppearance="@style/TextAppearance.StatusBar.Title"
                 android:singleLine="true"
                 android:background="@android:color/transparent"
                 android:layout_marginRight="6.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/title_bar_shadow"
            android:scaleType="fitXY"
        />

    </FrameLayout>
</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/power_and_carrier"
    android:visibility="gone"
    android:layout_weight="1"
    android:orientation="vertical"
     >

        <LinearLayout android:id="@+id/carrier_label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
        >
            <com.android.systemui.statusbar.CarrierLabel
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:paddingBottom="1dp"
                android:paddingLeft="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/carrier_label_text_color"
                />

         <ImageView android:id="@+id/music_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="1dp"
            android:paddingBottom="1dp"
            android:layout_toLeftOf="@+id/clear_all_button"
            android:src="@drawable/ic_music_toggle"
            />

            <TextView android:id="@+id/clear_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp"
                android:textSize="14sp"
                android:textColor="#ff000000"
                android:text="@string/status_bar_clear_all_button"
                style="?android:attr/buttonStyle"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@android:drawable/btn_default_small"
            />
        </LinearLayout>

        <com.android.systemui.statusbar.powerwidget.PowerWidget android:id="@+id/exp_power_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.android.systemui.statusbar.powerwidget.PowerWidgetOne android:id="@+id/exp_power_stat_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.android.systemui.statusbar.powerwidget.PowerWidgetTwo android:id="@+id/exp_power_stat_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.android.systemui.statusbar.powerwidget.PowerWidgetThree android:id="@+id/exp_power_stat_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.android.systemui.statusbar.powerwidget.PowerWidgetFour android:id="@+id/exp_power_stat_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <!-- <com.android.systemui.statusbar.RecentApps android:id="@+id/recent_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            /> -->

        <com.android.systemui.statusbar.MusicControls android:id="@+id/exp_music_controls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/title_bar_shadow"
            android:scaleType="fitXY"
        />
</LinearLayout>
<!-- END STACK 2 -->
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:background="@drawable/title_bar_portrait"
    android:id="@+id/expanded_bottom_bar"
    >
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textAppearance="@style/TextAppearance.StatusBar.Title"
      android:textColor="@color/carrier_label_text_color"
      android:text="@string/status_bar_notifications"
      android:gravity="center"
      android:id="@+id/statusbar_notification_toggle"
      android:clickable="true"
      />
  <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textAppearance="@style/TextAppearance.StatusBar.Title"
      android:textColor="@color/carrier_label_text_color"
      android:text="@string/status_bar_powerwidget"
      android:layout_toRightOf="@+id/statusbar_notification_toggle"
      android:gravity="center"
      android:id="@+id/statusbar_buttons_toggle"
      android:clickable="true"
      />
</LinearLayout>
</com.android.systemui.statusbar.ExpandedView>
